--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,20 +1,20 @@
 <div>
     <div class="container">
         <div class="row">
-        <div class="col-sm-12 text-center" ng-hide="nameEdit">
-            <h2 ng-hide="nameEdit">User Name: {{user.name}}</h2>
-            <a href="" ng-click="nameEdit=true">change</a>
+        <div class="col-sm-12 text-center" ng-hide="home.nameEdit">
+            <h2 ng-hide="home.nameEdit">User Name: {{home.user.name}}</h2>
+            <a href="" ng-click="home.nameEdit=true">change</a>
         </div>
-            <div class="col-sm-12 text-center" ng-show="nameEdit">
-                <input type="text" placeholder="type your name" ng-model="user.name"></input>
-                <button type="button" class="btn btn-primary" ng-click="setUserName(name)">change</button>
+            <div class="col-sm-12 text-center" ng-show="home.nameEdit">
+                <input type="text" placeholder="type your name" ng-model="home.user.name"></input>
+                <button type="button" class="btn btn-primary" ng-click="home.setUserName(home.user.name)">change</button>
              </div>
         </div>
         <br>
         <div class="row">
             <div class="col-sm-12 text-center">
-                <input type="text" placeholder="type room name" ng-model="room.name"></input>
-                <button type="button" class="btn btn-primary" ng-click="createRoom(room.name)">Create a Room</button>
+                <input type="text" placeholder="type room name" ng-model="home.room.name"></input>
+                <button type="button" class="btn btn-primary" ng-click="home.createRoom(home.room.name)">Create a Room</button>
             </div>
         </div>
         <div class="row">
@@ -27,10 +27,10 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="(id, room) in rooms">
+                        <tr ng-repeat="(id, room) in home.rooms">
                             <td>{{room.name}}</td>
                             <td>
-                                 <button type="button" class="btn btn-primary" ng-click="joinRoom(id)">Join</button>
+                                 <button type="button" class="btn btn-primary" ng-click="home.joinRoom(id)">Join</button>
                             </td>
                         </tr>
                     </tbody>
