--- a/app/views/home.html
+++ b/app/views/home.html
@@ -24,6 +24,7 @@
                         <tr class="text-center">
                             <th>Room Name</th>
                             <th>#</th>
+                            <th>#</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -31,6 +32,9 @@
                             <td>{{room.name}}</td>
                             <td>
                                  <button type="button" class="btn btn-primary" ng-click="home.joinRoom(id)">Join</button>
+                            </td>
+                            <td>
+                                <div class="glyphicon glyphicon-remove text-danger" ng-click="home.removeRoom(id)"></div>
                             </td>
                         </tr>
                     </tbody>
