--- a/app/views/room.html
+++ b/app/views/room.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-sm-3">
                 <div ng-repeat="(k,u) in room.room.users">
-                    <div class="glyphicon glyphicon-tower" ng-show="room.room.owner == k"></div>
+                    <div class="glyphicon glyphicon-tower text-warning" ng-show="room.room.owner == k"></div>
                     <div class="glyphicon glyphicon-user" ng-hide="room.room.owner == k"></div>
                     {{u.name}}
                     <div class="glyphicon glyphicon-ok" ng-show="u.vote"></div>
@@ -15,7 +15,7 @@
                 <h1>{{room.name}}</h1>
                 <br />
                 <div>
-                    <div class="pokerCard" ng-click="room.selectCard(card)" ng-repeat="card in room.cards">
+                    <div class="pokerCard" ng-class="{selected: card == room.user.vote}" ng-click="room.selectCard(card)" ng-repeat="card in room.cards">
                       <div class="ribbon"></div>
                       <div class="ribbonValue">{{card}}</div>
                       <div class="value">{{card}}</div>
