--- a/app/views/room.html
+++ b/app/views/room.html
@@ -1,33 +1,34 @@
 <div>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-3">
-                <div ng-repeat="(k,u) in room.room.users">
-                    <div class="glyphicon glyphicon-tower text-warning" ng-show="room.room.owner == k"></div>
-                    <div class="glyphicon glyphicon-user" ng-hide="room.room.owner == k"></div>
-                    {{u.name}}
-                    <div class="glyphicon glyphicon-ok" ng-show="u.vote"></div>
-                    <div ng-show="room.room.revealVote">{{u.vote}}</div>
-                </div>
-                <button type="button" class="btn btn-warning center" ng-click="room.exitRoom()">Exit</button>
-            </div>
-            <div class="col-sm-9">
-                <h1>{{room.name}}</h1>
-                <br />
-                <div>
-                    <div class="pokerCard" ng-class="{selected: card == room.user.vote}" ng-click="room.selectCard(card)" ng-repeat="card in room.cards">
-                      <div class="ribbon"></div>
-                      <div class="ribbonValue">{{card}}</div>
-                      <div class="value">{{card}}</div>
+        <div class="row  row-eq-height">
+            <div class="col-sm-3  col-sm-offset-1 bg-danger">
+                <div class="row">
+                    <div ng-repeat="(k,u) in room.room.users">
+                        <div class="glyphicon glyphicon-tower text-warning" ng-show="room.room.owner == k"></div>
+                        <div class="glyphicon glyphicon-user" ng-hide="room.room.owner == k"></div>
+                        {{u.name}}
+                        <div class="glyphicon glyphicon-ok" ng-show="u.vote"></div>
+                        <div class="glyphicon glyphicon-remove" ng-click="room.kickUser(k)" ng-show="room.user.$id == room.room.owner && room.user.$id != k"></div>
+                        <div ng-show="room.room.revealVote">{{u.vote}}</div>
                     </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <h1>{{room.room.name}}</h1>
+                <br />
+                <div class="deckContainer">
+                    <deck cards="room.cards" selected="room.room.users[room.user.$id].vote" closeable="true" selection="room.selectCard"/>
                 </div>
                 <h1>{{data.text}}</h1>
             </div>
         </div>
         <br />
-        <br />
-        <div class="row">
-            <div class="col-sm-8 col-sm-offset-4">
+        <div class="row text-center">
+            <div class="col-sm-3  col-sm-offset-1">
+                <button type="button" class="btn btn-warning" ng-click="room.exitRoom()">Exit</button>
+            </div>
+
+            <div class="col-sm-6">
                 <button type="button" class="btn btn-warning" ng-click="room.revealVotes(card)" ng-show="room.user.$id == room.room.owner">Reveal Votes</button>
                 <button type="button" class="btn btn-warning" ng-click="room.restartRound(card)" ng-show="room.user.$id == room.room.owner">Restart Round</button>
             </div>
