--- a/app/app.css
+++ b/app/app.css
@@ -115,3 +115,35 @@ h2 {
   display: -ms-flexbox;
   display:         flex;
 }
+
+.loading-shade{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0.2;
+  background-color: black;
+
+}
+
+.loading-shade div{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -50px;
+    color: white;
+    opacity: 1;
+    font-size: 80px;
+    z-index: 99;
+}
+
+.glyphicon-refresh-animate {
+    -webkit-animation: spin2 .7s infinite linear;
+}
+
+@-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg);}
+    to { -webkit-transform: rotate(360deg);}
+}
