--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-cloak>
     <div class="container">
         <div class="row">
         <div class="col-sm-12 text-center" ng-hide="home.nameEdit">
